<resources>
    <string name="app_name">AlmacenApp</string>

    <!--    PC DELL COMO SERVER-->
    <!--    <string name="ipServidor">http://172.16.49.77:8080/Almacen/</string>-->

    <!--    PC DELL COMO TEST-->
        <string name="ipServidor">http://172.16.49.77:8088/Almacen/</string>


    <!--    SERVER-->
<!--    <string name="ipServidor">http://172.16.49.141:8080/Almacen/</string>-->

    <string name="qrApi">https://api.qrserver.com/v1/create-qr-code/?data=</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido! "</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Acceso incorrecto"</string>


    <!-- Strings de content layout -->
    <string name="btn1">Almacén</string>
    <string name="btn2">Técnica</string>
    <string name="btn3">Llaves</string>
    <string name="btn4">Cerrar Sesión</string>


    <string name="tituloPedido">Pedido</string>
    <string name="nuevo_pedido">Nuevo Pedido</string>

    <string name="tituloArticulo">Artículo</string>
    <string name="nuevo_articulo">Nuevo Artículo</string>

    <string name="tituloProveedor">Proveedor</string>
    <string name="nuevo_proveedor">Nuevo Proveedor</string>


    <string name="agregar">Agregar</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre">Nombre</string>
    <string name="categoria">Seleccione una categoría</string>
    <string name="subcategoria">Seleccione una subcategoría</string>
    <string name="proveedor">Seleccione un proveedor</string>
    <string name="buscarArticulo">Buscar artículo específico</string>
    <string name="listaArticulos">Lista de artículos</string>
    <string name="tituloStock">Stock</string>
    <string name="listaProveedores">Lista de proveedores</string>


    <string name="action_reset">Reset</string>
    <string name="no_selection">No ha seleccionado</string>
    <string name="articulo_especifico">Artículo Específico</string>


    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
    <string name="settings_title">BarcodeDetection Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="product_search_button">Search object</string>
    <plurals name="bottom_sheet_title">
        <item quantity="one">%d match found</item>
        <item quantity="other">%d matches found</item>
    </plurals>
    <string name="static_image_prompt_detected_no_results">No results found</string>
    <string name="static_image_prompt_detected_results">Tap on a dot to inspect</string>
    <string name="static_image_card_no_result_title">No result found</string>
    <string name="static_image_card_no_result_subtitle">Support text place holder</string>
    <string name="static_image_preview_card_subtitle">+%d more results</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
    <string name="mensaje_inicio_camara">Presiona un código para seleccionarlo, utilice dos dedos para ampliar.</string>
    <string name="title_activity_login">Ingresar</string>
</resources>
