<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ArticuloActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_articulo"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />

        <View style="@style/Divider" />

        <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:RevealEmptyText="@string/categoria" />

        <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
            android:id="@+id/subcategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:RevealEmptyText="@string/subcategoria" />


        <EditText
            android:id="@+id/nombreArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/costoArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Costo"
            android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/stockMinArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Stock mínimo"
            android:inputType="number" />

        <EditText
            android:id="@+id/stockActualArticulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Stock actual"
            android:inputType="number" />

        <gr.escsoft.michaelprimez.searchablespinner.SearchableSpinner
            android:id="@+id/proveedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:RevealEmptyText="@string/proveedor" />

        <Button
            android:id="@+id/articuloAgregar"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />


    </LinearLayout>
</ScrollView>