<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_proveedor"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary" />

    <View style="@style/Divider" />

    <EditText
        android:id="@+id/nombreProveedor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPersonName"
    android:hint="@string/nombre" />
    <EditText
        android:id="@+id/telefonoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="Teléfono" />
    <EditText
        android:id="@+id/contactoProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Persona de contacto" />
    <EditText
        android:id="@+id/direccionProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Dirección" />
    <EditText
        android:id="@+id/mailProveedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="Mail"
        />


    <Button
        android:id="@+id/proveedorAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/agregar"
/>
</LinearLayout>